--- a/src/pages/cadastrar-peso/cadastrar-peso.scss
+++ b/src/pages/cadastrar-peso/cadastrar-peso.scss
@@ -1,3 +1,17 @@
 page-cadastrar-peso {
 
 }
+
+.corpo{
+    width: 100%;
+    height: 82%;
+    border: 1;
+}
+
+/*#monitor{
+    border-radius: 25px;
+    background: #73AD21;
+    padding: 20px; 
+    width: 100%;
+    height: 250px; 
+}*/
