alterações na formatação da lista

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,10 @@
 page-login {
 
 }
+
+#linkCriarConta{
+    color: #072e9b;
+    font-size: big;
+    font-family: Verdana, Geneva, Arial, sans-serif;
+    text-align: center;
+}
