--- a/src/pages/cadastro/cadastro.scss
+++ b/src/pages/cadastro/cadastro.scss
@@ -1,3 +1,8 @@
 page-cadastro {
-
+    .invalid>.item-inner{
+        border-bottom: 1px solid red !important;
+    }
+    .valid>.item-inner{
+        border-bottom: 1px solid green !important;
+    }
 }
