--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -11,8 +11,11 @@ page-login {
     }
 
     #logo-login{
-        width: 80%;
-        margin: 0 10% 20px;
+        display: block;
         vertical-align: middle;
+        margin: 0 0 15px;
+        background-color: white;
+        width: 100%;
+        height: auto;
     }
 }
